--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "src/css/plugins/slick/slick.css",
               "src/css/plugins/slick/slick-theme.css",
               "src/css/animate.css",
+              "node_modules/sweetalert2/dist/sweetalert2.min.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -45,6 +46,7 @@
               "src/js/plugins/slimscroll/jquery.slimscroll.min.js",
               "src/js/plugins/slick/slick.min.js",
               "src/js/plugins/chosen/chosen.jquery.js",
+              "node_modules/sweetalert2/dist/sweetalert2.min.js",
               "src/js/inspinia.js"
             ]
           },
