--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@angular/upgrade": "^6.0.0",
     "angular-in-memory-web-api": "^0.6.0",
     "core-js": "^2.5.4",
+    "ngx-currency-mask": "^4.3.2",
     "ngx-mask": "^6.1.2",
     "rxjs": "^6.0.0",
+    "sweetalert2": "^7.26.12",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
