--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,7 @@
               "src/js/plugins/slick/slick.min.js",
               "src/js/plugins/chosen/chosen.jquery.js",
               "node_modules/sweetalert2/dist/sweetalert2.min.js",
+              "src/js/select-2.min.js",
               "src/js/inspinia.js"
             ]
           },
