--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular/router": "^6.0.0",
     "@angular/upgrade": "^6.0.0",
     "angular-in-memory-web-api": "^0.6.0",
+    "angular-select2-component": "^1.1.4",
     "core-js": "^2.5.4",
+    "ng2-select2": "^1.0.0-beta.16",
     "ngx-currency-mask": "^4.3.2",
     "ngx-mask": "^6.1.2",
     "rxjs": "^6.0.0",
